# HSE_MLDS_project_bigdata

./: .gitignore  README.md  bol_theater_dag.py  bolshoi_theater_dag.py  pyproject.toml  telegtambot.py  theater_dag.py
configs/: airflow_args.py  constants.py  db_params.py  parquet_paths.py
helpers/: clear_tables.py  create_tables.py  show_tables.py
parsing/: Parsing.ipynb  load_data.py  parsing.py
processing/: create_notifications_parquet.py  create_performances_parquet.py  notification_rules.py  upload_data_to_mysql.py
telegram/: create_tables.py  only_for_dmitry_testing.py  send_push_message.py  send_push_messages.py  telegram_bot.py  telegtambot.py
